examples/test/testpolicy3770.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3770
  namespace: namespace103
spec:
  podSelector:
    matchLabels:
      key38: value31
      key18: value26
      key26: value42
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value48
      podSelector:
        matchLabels:
          key2: value6
